# pmg-ec-2026-1-tcc2-cluterizacao-de-sensores-iiot

./: .clang-format  .gitignore  README.md  analyze_ensaios.py  flash_all.sh  partitions.csv  sdkconfig.old  sensores_iiot.db
analysis/: README.md  analyze_consumo.py  analyze_influx.py  calibration.py  contract.py  params.py  relatorio-empate-consumo.md  relatorio-ensaios-2026-06-20.md  run.py
analysis/adapters/: hardware.py
docs/: medicao-correntes.md
main/: CMakeLists.txt  Kconfig.projbuild
main/include/: TaskPriorities.hpp
main/include/AmmeterService/: ammeter_persistence.hpp  ammeter_service.hpp
main/include/Application/: energy_service.hpp  leader_policy.hpp  nvs_service.hpp  reset_service.hpp  role_service.hpp  run_service.hpp  sampling_service.hpp
main/include/MqttService/: mqtt_controller.hpp
main/include/Network/: network_service.hpp  wifi_driver.hpp
main/include/RtcService/: rtc_service.hpp
main/src/AmmeterService/: ammeter_ina219_service.cpp  ammeter_persistence.cpp  ammeter_service.cpp
main/src/Application/: application_controller.cpp  button_service.cpp  discover_service.cpp  energy_service.cpp  leader_policy.cpp  nvs_service.cpp  reading_service.cpp  reset_service.cpp  role_service.cpp  run_service.cpp  sampling_service.cpp
main/src/LedService/: led_controller.cpp
main/src/MqttService/: mqtt_controller.cpp
main/src/Network/: esp_now_driver.cpp  network_controller.cpp  network_service.cpp  wifi_driver.cpp
main/src/RtcService/: rtc_service.cpp
server/: mqtt_to_influx.py  requirements.txt  sensores_iiot.db  server_mqtt.py
(+31 files in other folders)
